--- a/JICHANGEAPI/ClientApp/src/assets/i18n/en.json
+++ b/JICHANGEAPI/ClientApp/src/assets/i18n/en.json
@@ -20,7 +20,8 @@
     "all": "All",
     "optional": "Optional",
     "pleaseFill": "Please fill",
-    "send": "Send"
+    "send": "Send",
+    "loading": "Loading"
   },
   "forms": {
     "from": "From",
