--- a/JICHANGEAPI/ClientApp/src/assets/i18n/sw.json
+++ b/JICHANGEAPI/ClientApp/src/assets/i18n/sw.json
@@ -19,7 +19,8 @@
     "all": "Yote",
     "optional": "Hiari",
     "pleaseFill": "Tafadhali jaza",
-    "send": "Tuma"
+    "send": "Tuma",
+    "loading": "Subiri"
   },
   "forms": {
     "from": "Kutoka",
